# doc/user/swagger.yaml
@@ -52,6 +52,25 @@ paths:
           description: Bad Request
         '404':
           description: Not Found
+  /auth/resend-otp:
+    post:
+      tags:
+        - auth
+      summary: Resend OTP
+      description: Resend verification OTP to user email
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ResendOTPRequest'
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+        '404':
+          description: Not Found
   /auth/login:
     post:
       tags:
@@ -73,6 +92,25 @@ paths:
                 $ref: '#/components/schemas/LoginResponse'
         '401':
           description: Unauthorized
+  /user/me:
+    get:
+      tags:
+        - user
+      summary: Get current user profile
+      description: Get the profile data of the currently logged-in user
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoginResponse'
+        '401':
+          description: Unauthorized
+        '404':
+          description: Not Found
   /user/email/request-update:
     post:
       tags:
